Fix some test suite inputs

--- a/server/tests-py/queries/remote_schemas/remote_relationships/mixed_fragments.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/mixed_fragments.yaml
@@ -6,11 +6,14 @@ response:
     profiles:
       - id: 1
       - id: 2
+      - id: 3
     messages:
       - id: 1
         msg: You win!
       - id: 2
         msg: You lose!
+      - id: 3
+        msg: Another alice
 query:
   query: |
     fragment basicInfo on Message {
