fix validation over nested fields

--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_nested_fields.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_nested_fields.yaml
@@ -11,9 +11,9 @@ args:
       arguments:
         user_id: $id
       field:
-        messages:
+        userMessages:
           arguments:
-            where:
+            whered:
               name:
                 eq: $name
 
