--- a/server/tests-py/queries/remote_schemas/remote_relationships/remote_rel_variables.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/remote_rel_variables.yaml
@@ -24,6 +24,20 @@ query:
           msg
         }
       }
+=>
+      profiles {
+        id
+
+      }
+
+     profiles->account->bio->.
+     messagesNestedArgs(where: { name: { eq: $name } }) {
+          id
+          msg
+     }
+
+
+
     }
   variables:
     name: alice
