Add tests for tracking function and table with same name

--- a/server/tests-py/queries/v1/track_table/teardown.yaml
+++ b/server/tests-py/queries/v1/track_table/teardown.yaml
@@ -5,5 +5,7 @@ args:
   args:
     sql: |
       drop table hge_tests.resident;
+      drop function article;
       drop table article;
       drop table author;
+    cascade: true
