Working basic relationship

--- a/server/tests-py/queries/remote_schemas/remote_relationships/basic_relationship.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/basic_relationship.yaml
@@ -6,11 +6,14 @@ response:
     profiles:
       - id: 1
         messageBasic:
-          name: Alice
+          name: alice
       - id: 2
         messageBasic:
-          name: Bob
-query: 
+          name: bob
+      - id: 3
+        messageBasic:
+          name: alice
+query:
   query: |
     query {
       profiles {
