Tweak basic array

--- a/server/tests-py/queries/remote_schemas/remote_relationships/basic_array.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/basic_array.yaml
@@ -20,13 +20,15 @@ response:
             msg: You win!
           - name: alice
             msg: Another alice
-query: 
+query:
   query: |
     query {
       profiles {
         id
+        name
         messagesNestedArr {
           name
+          msg
         }
       }
     }
