--- a/server/tests-py/queries/v1/track_table/track_table_function_same_name.yaml
+++ b/server/tests-py/queries/v1/track_table/track_table_function_same_name.yaml
@@ -7,16 +7,16 @@
   query:
     type: track_table
     args:
-      name: article
+      name: test1
 
 - description: Track function
   url: /v1/query
   status: 400
   response:
     code: not-supported
-    error: table with name "article" already exists
+    error: table with name "test1" already exists
     path: $.args
   query:
     type: track_function
     args:
-      name: article
+      name: test1
