--- a/server/tests-py/queries/remote_schemas/remote_relationships/query_with_arguments.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/query_with_arguments.yaml
@@ -16,14 +16,12 @@ response:
             msg: Another alice
 query:
   query: |
-    query ($name: String!) {
+    query {
       profiles {
         id
-        messagesNestedArgs(includes: { name:  [$name] }) {
+        messagesNestedArgs(where: { name: { eq:  'alice' } }) {
           id
           msg
         }
       }
     }
-  variables:
-    name: alice
