--- a/server/tests-py/queries/remote_schemas/remote_relationships/query_with_arguments.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/query_with_arguments.yaml
@@ -19,7 +19,7 @@ query:
     query {
       profiles {
         id
-        messagesNestedArgs(where: { name: { eq:  'alice' } }) {
+        messagesNestedArgs(where: { name: { eq:  "alice" } }) {
           id
           msg
         }
