--- a/server/tests-py/queries/remote_schemas/remote_relationships/teardown.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/teardown.yaml
@@ -3,8 +3,8 @@ args:
 - type: run_sql
   args:
     sql: |
-      delete from hdb_catalog.hdb_remote_relationship;
       drop table profiles
+# also drops remote relationship as direct dep
 - type: remove_remote_schema
   args:
     name: my-remote-schema
