add graphql-voyager to console (close #314) (#2369)

--- a/console/package.json
+++ b/console/package.json
@@ -60,7 +60,8 @@
     "graphiql": "^0.11.11",
     "graphiql-explorer-hasura": "0.0.7",
     "graphql": "^14.3.0",
-    "hasura-console-graphiql": "0.0.10",
+    "graphql-voyager": "^1.0.0-rc.27",
+    "hasura-console-graphiql": "0.0.11",
     "history": "^3.0.0",
     "hoist-non-react-statics": "^1.0.3",
     "inflection": "^1.12.0",
