fix mutation tests

--- a/server/tests-py/queries/graphql_mutation/insert/permissions/developer_insert_has_keys_any_fail.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/permissions/developer_insert_has_keys_any_fail.yaml
@@ -10,7 +10,7 @@ response:
 headers:
   X-Hasura-Role: developer
   X-Hasura-Spec-Keys: |-
-    ["display","memory","warranty"]
+    {display,memory,warranty}
 query:
   variables:
     spec:
@@ -27,7 +27,6 @@ query:
       ) {
         affected_rows
         returning {
-          id
           name
           spec
           }
