--- a/server/tests-py/queries/graphql_mutation/insert/permissions/seller_insert_computer_has_keys_all_fail.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/permissions/seller_insert_computer_has_keys_all_fail.yaml
@@ -10,7 +10,7 @@ response:
 headers:
   X-Hasura-Role: seller
   X-Hasura-Spec-Required-Keys: |-
-    ["processor","display","memory","warranty"]
+    {processor,display,memory,warranty}
 query:
   variables:
     spec:
@@ -29,7 +29,6 @@ query:
       ) {
         affected_rows
         returning {
-          id
           name
           spec
           }
