add tests for permissions using array operators with session variables

--- a/server/tests-py/queries/graphql_query/permissions/setup.yaml
+++ b/server/tests-py/queries/graphql_query/permissions/setup.yaml
@@ -243,6 +243,28 @@ args:
           id: X-Hasura-Artist-Id
       allow_aggregations: true
 
+#Create select permssion on Track using _in operator
+- type: create_select_permission
+  args:
+    table: Artist
+    role: free_user_in
+    permission:
+      columns: '*'
+      filter:
+        name:
+          _in: X-Hasura-Free-Artists
+
+#Create select permssion on Track using _nin operator
+- type: create_select_permission
+  args:
+    table: Artist
+    role: free_user_nin
+    permission:
+      columns: '*'
+      filter:
+        name:
+          _nin: X-Hasura-Premium-Artists
+
 # Create search_track function
 - type: run_sql
   args:
@@ -347,13 +369,26 @@ args:
   args:
     sql: |
        CREATE TABLE jsonb_table(
-         id SERIAL PRIMARY KEY,
+         id INTEGER NOT NULL PRIMARY KEY,
          jsonb_col jsonb NOT NULL
        );
 - type: track_table
   args:
     name: jsonb_table
     schema: public
+
+#Insert data
+- type: insert
+  args:
+    table: jsonb_table
+    objects:
+    - id: 1
+      jsonb_col:
+        name: Hasura
+        age: 7
+    - id: 2
+      jsonb_col:
+        name: Cross
 
 #Create select permission using jsonb operator
 - type: create_select_permission
@@ -380,19 +415,6 @@ args:
         jsonb_col:
           $has_key: X-Hasura-Has-Key
 
-# Using jsonb column and $nin operator
-- type: create_select_permission
-  args:
-    table: jsonb_table
-    role: user3
-    permission:
-      columns:
-      - id
-      - jsonb_col
-      filter:
-        jsonb_col:
-          $nin: X-Hasura-Protected-Jsons
-
 # Using jsonb column and $has_keys_any operator
 - type: create_select_permission
   args:
@@ -418,17 +440,6 @@ args:
       filter:
         jsonb_col:
           $has_keys_all: X-Hasura-Json-Required-Keys
-
-#Insert data
-- type: insert
-  args:
-    table: jsonb_table
-    objects:
-    - jsonb_col:
-        name: Hasura
-        age: 7
-    - jsonb_col:
-        name: Cross
 
 #Create grade_point table
 - type: run_sql
