update license in cabal file to Apache-2.0

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -3,11 +3,11 @@ version:             1.0.0
 synopsis:            GraphQL API over Postgres
 -- description:
 homepage:            https://www.hasura.io
-license:             AGPL-3.0
+license:             Apache-2.0
 -- license-file:        LICENSE.md
 author:              Vamshi Surabhi
 maintainer:          vamshi@hasura.io
-copyright:           2017-2018 Hasura Techonologies Pvt. Ltd
+copyright:           2017-2019 Hasura Inc.
 category:            Database
 build-type:          Simple
 -- extra-source-files:  README.md
