--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -354,6 +354,7 @@ executable graphql-engine
                      , connection
                      , string-conversions
                      , uuid
+                     , wai
 
   other-modules:       Ops
                      , Migrate
