Add ordered version of aeson

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -262,6 +262,7 @@ library
 
                      , Data.Text.Extended
                      , Data.Aeson.Extended
+                     , Data.Parser.Json
                      , Data.Sequence.NonEmpty
                      , Data.TByteString
                      , Data.HashMap.Strict.InsOrd.Extended
