--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -132,8 +132,9 @@ library
                      -- pretty printer
                      , ansi-wl-pprint
 
-                     -- metrics in multiplexed subs
+                     -- for capturing various metrics
                      , ekg-core
+                     , ekg-json
 
                      -- metrics for CI integration
                      , ci-info
