create a new hasura middleware type

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -60,6 +60,7 @@ library
                      , wai
                      , postgresql-binary
                      , process
+                     , http-client-tls
 
                      -- Encoder related
                      , uuid
