--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -262,7 +262,7 @@ library
 
                      , Data.Text.Extended
                      , Data.Aeson.Extended
-                     , Data.Parser.Json
+                     , Data.Aeson.Ordered
                      , Data.Sequence.NonEmpty
                      , Data.TByteString
                      , Data.HashMap.Strict.InsOrd.Extended
