use all avaialble cores by default
sets -N rts flag by default. Can be disabled by
setting the `GHCRTS` env variable to `-N1`.

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -364,3 +364,4 @@ executable graphql-engine
                -Wincomplete-uni-patterns
                -Wredundant-constraints
                -threaded -rtsopts
+               -with-rtsopts=-N
