--- a/community/learn/graphql-tutorials/remote-hasura.yaml.sample
+++ b/community/learn/graphql-tutorials/remote-hasura.yaml.sample
@@ -59,6 +59,16 @@ spec:
       name: android-apollo
       path: ./community/learn/graphql-tutorials/tutorials/android-apollo/tutorial-site
     name: android-apollo
+  - containers:
+    - dockerfile: ./community/learn/graphql-tutorials/tutorials/elm-apollo/tutorial-site/Dockerfile
+      name: elm-apollo
+      path: ./community/learn/graphql-tutorials/tutorials/elm-apollo/tutorial-site
+    name: elm-apollo
+  - containers:
+    - dockerfile: ./community/learn/graphql-tutorials/tutorials/reason-react-apollo/tutorial-site/Dockerfile
+      name: reason-react-apollo
+      path: ./community/learn/graphql-tutorials/tutorials/reason-react-apollo/tutorial-site
+    name: reason-react-apollo
   manifests:
     helm: {}
     path: ./community/learn/graphql-tutorials/manifests
