Increase idle GC interval to workaround CPU leak issue
This seems to resolve the issue locally (and has worked in the past),
but it's not clear what exactly is going on here (in particular, why
this should resolve what looks like a memory leak). It certainly seems
like a GHC issue of some sort.

Closes #2565

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -362,4 +362,5 @@ executable graphql-engine
                -Wincomplete-uni-patterns
                -Wredundant-constraints
                -threaded -rtsopts
-               -with-rtsopts=-N
+               -- Re. `-I2` see #2565
+               "-with-rtsopts=-N -I2"
