--- a/community/learn/graphql-tutorials/remote-hasura.yaml.sample
+++ b/community/learn/graphql-tutorials/remote-hasura.yaml.sample
@@ -69,6 +69,11 @@ spec:
       name: reason-react-apollo
       path: ./community/learn/graphql-tutorials/tutorials/reason-react-apollo/tutorial-site
     name: reason-react-apollo
+  - containers:
+    - dockerfile: ./community/learn/graphql-tutorials/tutorials/flutter-graphql/tutorial-site/Dockerfile
+      name: flutter-graphql
+      path: ./community/learn/graphql-tutorials/tutorials/flutter-graphql/tutorial-site
+    name: flutter-graphql
   manifests:
     helm: {}
     path: ./community/learn/graphql-tutorials/manifests
